[package]
name = "iga-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.iga]
package = "indexer-gateway-auth"
path = ".."

[[bin]]
name = "classify"
path = "fuzz_targets/classify.rs"
test = false
doc = false
bench = false

# Keep the fuzz crate out of the parent build/test graph.
[workspace]
